Nova fase do curso de Desenvolvimento Web - 2018

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>Curso de Desenvolvimento Web Z</title>
+  <title>Curso Desenvolvimento Front-end para o Mercado</title>
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
@@ -41,104 +41,8 @@
 
 </head>
 <body>
-  <nav class="orange" role="navigation">
-    <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Desenvolvimento Web Z</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a id="conteudo-container" href="#conteudo">Sobre</a></li>
-        <li><a id="modulos-container" href="#modulos">Módulos</a></li>
-        <li><a id="inscrevase-container" href="#count-banner">Inscreva-se</a></li>
-        <li><a id="mestres-container" href="#mestres">Mestres</a></li>
-      </ul>
-      <ul id="nav-mobile" class="side-nav">
-        <li><a id="logo-container" href="#">Desenvolvimento Web</a></li>
-        <li><a id="conteudo-container" href="#conteudo">Sobre</a></li>
-        <li><a id="modulos-container" href="#modulos">Módulos</a></li>
-        <li><a id="inscrevase-container" href="#count-banner">Inscreva-se</a></li>
-        <li><a id="inscrevase-container" href="#mestres">Mestres</a></li>
-      </ul>
-      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
-    </div>
-  </nav>
-
-  <div id="index-banner" class="parallax-container">
-    <div class="container row center">
-      <h1 class="shadow saiyan-sans">Desenvolvimento Web Z</h1>
-      <h3 class="shadow">Uma abordagem Saiyajin</h1>
-    </div>
-    <div class="parallax"><img src="img/dragonball-1.jpg"></div>
-  </div>
-
-  <div class="container" id="conteudo">
-    <div class="section">
-      <div class="row">
-        <h1 class="center orange-text saiyan-sans">Sobre</h1>
-        <p class="justify-align light">
-		  O curso Desenvolvimento Web Z foi feito para quem deseja cair de cabeça no mundo do desenvolvimento Web com foco em Front End.
-        </p>
-        <p class="justify-align light">
-		  Os alunos que participarem deste curso serão treinados por discípulos do Mestre Kame e receberão a doutrina do HTML, CSS e Javascript através de aulas expositivas e muitas atividades práticas.
-        </p>
-        <p class="justify-align light">
-		  Além de acesso a metodologia do Mestre Kame os alunos irão aprender sobre tecnologias importantíssimas no mundo do desenvolvimento Front End como Bootstrap, Materialize, jQuery, LeafletJS, entre outros
-        </p>
-	  </div>
-	</div>
-  </div>
-  <div class="container" id="modulos">
-    <div class="section">
-      <div class="row">
-        <h1 class="center orange-text saiyan-sans">Modulos</h1>
-        <p class="justify-align light">
-			Objetivando a didática este curso será entregue no formato de 3 módulos sendo eles fundamentados respectivamente em cima de cada um dos pilares do desenvolvimento Front End (HTML, CSS e Javascript).
-        </p>
-        <div class="row">
-            <div class="col s12 m4">
-              <div class="icon-block">
-                <h5 class="center">Módulo Kuririn</h5>
-				<div class="guerreiros-z-bg kuririn"></div>
-                <h6 class="center">Conteúdos:</h6>
-                <ul>
-				  <li>HTML5 e seus elementos</li>
-                  <li>Mergulhando no Bootstrap</li>
-                  <li>Controlando versões com Git</li>
-				</ul>
-			  </div>
-            </div>
-
-            <div class="col s12 m4">
-              <div class="icon-block">
-                <h5 class="center">Módulo Piccolo</h5>
-				<div class="guerreiros-z-bg piccolo"></div>
-                <h6 class="center">Conteúdos:</h6>
-                <ul class="browser-default">
-                  <li>Estilizando com CSS</li>
-                  <li>Animando com CSS3</li>
-                  <li>Desenvolvendo Mobile-first</li>
-                </ul>
-              </div>
-          </div>
-
-            <div class="col s12 m4">
-              <div class="icon-block">
-                <h5 class="center">Módulo Goku</h5>
-				<div class="guerreiros-z-bg goku"></div>
-                <h6 class="center">Conteúdos:</h6>
-                <ul>
-                  <li>JavaScript</li>
-                  <li>JavaScript Orientado a Objetos</li>
-                  <li>Bibliotecas úteis</li>
-                </ul>
-              </div>
-            </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-
   <div id="count-banner" class="parallax-container">
-    <div class="container row center">
+    <div class="container row">
       <h1 class="shadow">Faltam</h1>
       <ul class="countdown">
         <li class="timer">
@@ -161,86 +65,17 @@
       	<p class="timeRefSeconds shadow"></p>
         </li>
       </ul>
-      <h3 class="shadow">Não perca tempo</h3>
-      <a target="_blank" href="https://www.eventbrite.com.br/e/curso-de-desenvolvimento-web-tickets-27304239716?aff=erelexpmlt" class="btn-large btn-dbz">Inscreva-se agora!</a>
-    </div>
-    <div class="parallax"><img src="img/esferas.jpg"></div>
-  </div>
-
-  <div class="container" id="mestres">
-    <div class="section">
-      <div class="row">
-        <h2 class="center brown-text">
-            <i>Os mestres</i>
-        </h2>
-        <div class="col s12 m4">
-            <div class="icon-block">
-                <img class="center" src="img/glau.jpg" height="100%" width="100%"/>
-                <h5 class="center">Gláuber Brennon</h5>
-                <p class="light justify-align">
-                    Em 2012, participou de diversos projetos Saffira (Sistema de Segurança Florestal), BSLS (Sistema de Segurança e Sinalização Luminosa voltada para ciclistas),
-                    ScanRT, Anson Framework, Kinesis, AutoSec e foi co-fundador Automatronic Wearable Devices.
-                    Em 2013, ganhou o segundo lugar no concurso 'Tecnologias que Transformam', na Campus Party.
-                    Em 2014, foi desenvolvedor na ADSS - Presença digital.
-                    Tem experiência em Linux Embarcado, MySQL, Zend PHP.
-                </p>
-            </div>
-        </div>
-
-        <div class="col s12 m4">
-            <div class="icon-block">
-                <img class="center" src="img/marcos.jpg" height="100%" width="100%"/>
-                <h5 class="center">Marcos Silva</h5>
-                <p class="light justify-align">
-                    Em 2009, fez o curso de desenvolvimento Java e buscou aprender outras linguagens e tecnologias tais como: PHP, Html, CSS, Javascript.
-                    Em 2010, entrou no curso de BCC na UFBA e desde então fez Iniciação ciêntifica e estágios adiquirindo experiências nas mais variadas áreas, tais como,
-                    mineração de dados, visão computacional, visualização de dados, em diversos frameworks, o Yii, o Wordpress, o Drupal, o Flask,
-                    em diversas linguagens de programação o C/C++, o Python, o Haskell, o Ruby, entre outras.
-                    Atualmente é lider de projeto e desenvolvedor no projeto GIIRO.
-                    Neste projeto utiliza HTML5, CSS3, Javascript, no front end, e no back end utiliza a linguagem de programação Python
-                    com o micro-framework Flask, o ORM SQLAlchemy com a extensão GeoAlchemy2 e o banco de dados Postgres com a extensão PostGis.
-                </p>
-            </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <img class="center" src="img/vr.jpg" height="100%" width="100%"/>
-            <h5 class="center">Víctor Romário</h5>
-            <p class="light justify-align">
-                Entrou para o mundo de desenvolvimento web em 2014,
-                devido ao projeto de Iniciação Científica que tinha como objetivo integrar a linguagem CUDA com JavaScript.
-                Atualmente estagia como desenvolvedor no projeto GIIRO (Gerenciador de Informações e Infraestrutura de Rede Óptica da Rede Nacional de Ensino e Pesquisa (RNP)),
-                no Ponto de Presença do Estado da Bahia (POP-BA) na UFBA.
-                Neste projeto, trabalha com HTML5, CSS3, Javascript, no front end, e no back end utiliza a linguagem de programação Python
-                com o micro-framework Flask, o ORM SQLAlchemy com a extensão GeoAlchemy2 e o banco de dados Postgres com a extensão PostGis.
-            </p>
-          </div>
-        </div>
+      <div class="col-sm-6">
+        <a target="_blank" href="https://www.eventbrite.com.br/e/curso-de-desenvolvimento-front-end-para-o-mercado-pela-manha-tickets-46450975117" class="btn-large btn-dbz">Turma Manhã</a>
       </div>
-
-    </div>
-  </div>
-
-  <footer class="page-footer teal">
-    <div class="container">
-      <div class="row">
-        <div class="col l9 s12">
-          <h5 class="white-text">Desenvolvimento Web Z</h5>
-          <p class="grey-text text-lighten-4">O curso Desenvolvimento Web Z é ministrado por Gláuber Brennon, Marcos Silva e Víctor Romário com apoio do Diretório Acadêmico de Engenharia da Computação (DAECOMP) UNIFACS.</p>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Apoio:</h5>
-          <img src="img/daecomp.png" height="80%" width="80%" />
-        </div>
+      <div class="col-sm-6">
+        <a target="_blank" href="https://www.eventbrite.com.br/e/curso-de-desenvolvimento-front-end-para-o-mercado-pela-tarde-tickets-46451155657" class="btn-large btn-dbz">Turma Tarde</a>
       </div>
     </div>
-    <div class="footer-copyright">
-        <div class="container">
-            <strong>Desenvolvido com <i class="fa fa-heart text-red" aria-hidden="true"></i> por <a class="brown-text text-lighten-3" href="https://www.instagram.com/vrvictorromario/" target="_blank">VR Paz de Jesus</a><a class="brown-text text-lighten-3" href="https://www.linkedin.com/in/massilva" target="_blank"> com Marcos Silva</a> <a class="brown-text text-lighten-3" href="https://www.linkedin.com/in/gbrennon" target="_blank"> & Gláuber Brennon</a></strong>
-        </div>
-    </div>
-  </footer>
+    <div class="parallax"><img src="img/newera.jpg"></div>
+
+
+  </div>
 
   <script src="js/jquery.js"></script>
   <script src="js/materialize.js"></script>
