--- a/index.html
+++ b/index.html
@@ -164,6 +164,67 @@
         </div>
     </section>
 
+    <section id="ementa">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Ementa</h2>
+                    <hr class="primary">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-list-alt text-primary sr-icons"></i>
+                        <h3>Plano de Aula</h3>
+                        <p class="text-muted">A ser seguido nos 5 dias de curso.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="service-box text-align-left">
+                        <ul>
+                          <li>HTML5 e seus elementos</li>
+                          <li>Projeto 1</li>
+                          <li>Estilizando com CSS</li>
+                          <li>Projeto 2</li>
+                          <li>Responsividade</li>
+                          <li>Bootstrap e seus elementos</li>
+                          <li>Projeto 3</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="service-box text-align-left">
+                      <ul>
+                        <li>Desenvolvendo Mobile-first</li>
+                        <li>Projeto 4</li>
+                        <li>Versionamento de código com: GIT</li>
+                        <li>Projeto 5</li>
+                        <li>JavaScript</li>
+                        <li>Projeto 6</li>
+                      </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="service-box text-align-left">
+                        <ul>
+                          <li>Orientação a Objetos com JavaScript</li>
+                          <li>Projeto 7</li>
+                          <li>Requisições HTTP</li>
+                          <li>Projeto 8</li>
+                          <li>Bibliotecas úteis</li>
+                        </ul>
+                    </div>
+                    <div class="text-center">
+                      <a href="#turmas" class="page-scroll btn btn-primary btn-xl sr-button">Ver as turmas</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="bg-back" id="turmas">
         <div class="container">
           <div class="row">
