Alteração no layout

--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
                       <a class="page-scroll" href="#viagem">Sobre</a>
                   </li>
                   <li>
+                      <a class="page-scroll" href="#ementa">Ementa</a>
+                  </li>
+                  <li>
                       <a class="page-scroll" href="#turmas">Turmas</a>
                   </li>
                   <li>
