--- a/index.html
+++ b/index.html
@@ -285,6 +285,45 @@
         </div>
     </section>
 
+    <section id="instrutor" class="bg-primary">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Instrutor</h2>
+                    <hr class="light">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="team-member text-center">
+                        <img src="img/vr.jpeg" class="img-responsive img-circle" alt="">
+                        <h4>Víctor Romário Paz de Jesus</h4>
+                        <p>Graduando em Engenharia da Computação - UFBA</p>
+                    </div>
+                </div>
+                <div class="col-sm-8">
+                  <ul>
+                    <li>2018 - atual - Desenvolvedor Web na RNP</li>
+                    <li>2018 - Palestrante na Campus Party Bahia</li>
+                    <li>2016 - 2017 - Estagiário na Rede Nacional de Pesquisa e Ensino (RNP)</li>
+                    <li>2014 - 2015 - Bolsista de Iniciação Científica (FAPESB)</li>
+                    <li>2015 - 2016 - Ministrante dos cursos #Power Java, Java Express e Java Extends pelo Ramo IEEE UNIFACS</li>
+                    <li>2013 - 2014 - Monitor Voluntário do Laboratório de Dispositivos Móveis e Sistemas Embarcados - UNIFACS</li>
+                    <hr class="light">
+                    <li>2017 - Ministrou mini curso sobre JavaFX na IEEE RNR & RNYP 2017</li>
+                    <ul>
+                      <li>IEEE Reunião Nacional dos Ramos & Reunião Nacional dos Young Professionals Brasil 2017 no Rio de Janeiro</li>
+                    </ul>
+                    <li>2016 - Criador do app "Nutrients Guide"</li>
+                    <li>2016 - Palestrante no Front in Salvador </li>
+                    <li>2016 - Palestrante no 1º Congresso de TI UNIFACS</li>
+                    <li>2015 - Expositor na Semana Nacional de Ciência e Tecnologia</li>
+                  </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="contato">
         <div class="container">
             <div class="row">
