--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
                       <a class="page-scroll" href="#turmas">Turmas</a>
                   </li>
                   <li>
+                      <a class="page-scroll" href="#instrutor">Instrutor</a>
+                  </li>
+                  <li>
                       <a class="page-scroll" href="#contato">Contato</a>
                   </li>
               </ul>
