--- a/index.html
+++ b/index.html
@@ -334,12 +334,19 @@
                     <h2 class="section-heading">Contato</h2>
                     <hr class="primary">
                     <p>Este curso é uma realização do Ramo IEEE UNIFACS, com o instrutor Víctor Romário e o apoio da UNIFACS</p>
-                    <i class="fa fa-facebook-square fa-3x sr-contact"></i>
-                    <p>facebook.com/ieeeunifacs </p>
-                    <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p>sb.unifacs@ieee.org</p>
-                    <img src="img/ieee.png" class="img-rounded img-responsive sr-contact avatar img-center" alt="">
+                    <img src="img/unifacs.jpeg" class="img-rounded img-responsive sr-contact avatar img-center" alt="">
                 </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-6 text-center">
+                <img src="img/ieee.png" class="img-rounded img-responsive sr-contact avatar img-center" alt="">
+              </div>
+              <div class="col-sm-6 text-center">
+                <i class="fa fa-facebook-square fa-3x sr-contact"></i>
+                <p>facebook.com/ieeeunifacs </p>
+                <i class="fa fa-envelope-o fa-3x sr-contact"></i>
+                <p>sb.unifacs@ieee.org</p>
+              </div>
             </div>
         </div>
     </section>
