Creação da área de vídeos

--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
                       <a class="page-scroll" href="#instrutor">Instrutor</a>
                   </li>
                   <li>
+                      <a class="page-scroll" href="#videos">Vídeos</a>
+                  </li>
+                  <li>
                       <a class="page-scroll" href="#contato">Contato</a>
                   </li>
               </ul>
@@ -326,6 +329,32 @@
             </div>
         </div>
     </section>
+
+    <section class="bg-back" id="videos">
+        <div class="container">
+          <div class="row">
+              <div class="col-lg-8 col-lg-offset-2 text-center">
+                  <h2 class="section-heading text-white">Vídeos</h2>
+                  <hr class="light">
+              </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/VQlLFN9ZOnA">
+                </iframe>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/v5pbdZ1VSAU">
+                </iframe>
+              </div>
+            </div>
+          </div>
+    </section>
+
+
 
     <section id="contato">
         <div class="container">
