Adiciona site carla augusto

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
           </div>
     </section>
 
-    <section id="instrutor" class="bg-primary">
+    <section id="projetos" class="bg-primary">
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -369,6 +369,12 @@
             <img src="img/alexsites.png" alt="...">
             <div class="carousel-caption">
               Página de Alex Brito<a target="_blank" href="https://alexbo5.github.io/pagina-perfil/">clique aqui</a>
+            </div>
+          </div>
+          <div class="item">
+            <img src="img/carlasite.png" alt="...">
+            <div class="carousel-caption">
+              Página de Carla Augusto<a target="_blank" href="https://carla13.github.io/Pagina-perfil/">clique aqui</a>
             </div>
           </div>
         </div>
