--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
           </div>
     </section>
 
-    <section id="instrutor" class="bg-primary">
+    <section id="projetos" class="bg-primary">
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -371,10 +371,16 @@
               Página de Alex Brito<a target="_blank" href="https://alexbo5.github.io/pagina-perfil/">clique aqui</a>
             </div>
           </div>
-          <div class="item active">
+          <div class="item">
             <img src="img/Fabiolasite.png" alt="...">
             <div class="carousel-caption">
               Página de Fabíola Oliveira<a target="_blank" href="https://fabiolaoss.github.io/PaginaPerfil/">clique aqui</a>
+            </div>
+          </div>
+          <div class="item">
+            <img src="img/matheus.png" alt="...">
+            <div class="carousel-caption">
+              Página de Matheus Chadud<a target="_blank" href="https://matheuschadud.github.io/pagina-perfil/">clique aqui</a>
             </div>
           </div>
         </div>
