--- a/index.html
+++ b/index.html
@@ -368,19 +368,25 @@
           <div class="item active">
             <img src="img/alexsites.png" alt="...">
             <div class="carousel-caption">
-              Página de Alex Brito<a target="_blank" href="https://alexbo5.github.io/pagina-perfil/">clique aqui</a>
+              <p>Página de Alex Brito <a target="_blank" href="https://alexbo5.github.io/pagina-perfil/">clique aqui</a></p>
             </div>
           </div>
           <div class="item">
             <img src="img/Fabiolasite.png" alt="...">
             <div class="carousel-caption">
-              Página de Fabíola Oliveira<a target="_blank" href="https://fabiolaoss.github.io/PaginaPerfil/">clique aqui</a>
+              <p>Página de Fabíola Oliveira <a target="_blank" href="https://fabiolaoss.github.io/PaginaPerfil/">clique aqui</a></p>
             </div>
           </div>
           <div class="item">
             <img src="img/matheus.png" alt="...">
             <div class="carousel-caption">
-              Página de Matheus Chadud<a target="_blank" href="https://matheuschadud.github.io/pagina-perfil/">clique aqui</a>
+              <p>Página de Matheus Chadud <a target="_blank" href="https://matheuschadud.github.io/pagina-perfil/">clique aqui</a></p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="img/matheus.png" alt="...">
+            <div class="carousel-caption">
+              <p>Página de Charles Souza <a target="_blank" href="https://charlessouza01.github.io/PaginaPerfil/">clique aqui</a></p>
             </div>
           </div>
         </div>
