--- a/index.html
+++ b/index.html
@@ -361,6 +361,9 @@
           <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
           <li data-target="#carousel-example-generic" data-slide-to="1"></li>
           <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="5"></li>
         </ol>
 
         <!-- Wrapper for slides -->
@@ -374,19 +377,25 @@
           <div class="item">
             <img src="img/Fabiolasite.png" alt="...">
             <div class="carousel-caption">
-              <p>Página de Fabíola Oliveira <a target="_blank" href="https://fabiolaoss.github.io/PaginaPerfil/">clique aqui</a></p>
+              <p>Página de Fabíola Oliveira <a target="_blank" href="https://fabiolaoss.github.io/PaginaPerfil/"> clique aqui </a></p>
             </div>
           </div>
           <div class="item">
             <img src="img/matheus.png" alt="...">
             <div class="carousel-caption">
-              <p>Página de Matheus Chadud <a target="_blank" href="https://matheuschadud.github.io/pagina-perfil/">clique aqui</a></p>
+              <p>Página de Matheus Chadud <a target="_blank" href="https://matheuschadud.github.io/pagina-perfil/"> clique aqui </a></p>
             </div>
           </div>
           <div class="item">
-            <img src="img/matheus.png" alt="...">
+            <img src="img/charles.png" alt="...">
             <div class="carousel-caption">
-              <p>Página de Charles Souza <a target="_blank" href="https://charlessouza01.github.io/PaginaPerfil/">clique aqui</a></p>
+              <p>Página de Charles Souza <a target="_blank" href="https://charlessouza01.github.io/PaginaPerfil/"> clique aqui </a></p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="img/Vital.png" alt="...">
+            <div class="carousel-caption">
+              <p>Página de Vital Vasconcelos <a target="_blank" href="https://vovj11.github.io/PaginaPerfil/"> clique aqui </a></p>
             </div>
           </div>
         </div>
