Correção de alteração de imagem

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
             </div>
           </div>
           <div class="item">
-            <img src="img/matheus.png" alt="...">
+            <img src="img/charles.png" alt="...">
             <div class="carousel-caption">
               <p>Página de Charles Souza <a target="_blank" href="https://charlessouza01.github.io/PaginaPerfil/">clique aqui</a></p>
             </div>
