Adicionando site de Felipe Gualberto

--- a/index.html
+++ b/index.html
@@ -398,6 +398,12 @@
               <p>Página de Vital Vasconcelos <a target="_blank" href="https://vovj11.github.io/PaginaPerfil/"> clique aqui </a></p>
             </div>
           </div>
+          <div class="item">
+            <img src="img/felipe-gualberto.png" alt="...">
+            <div class="carousel-caption">
+              <p>Página de Felipe Gualberto <a target="_blank" href="https://felipeagualberto.github.io/PaginaPerfil/"> clique aqui </a></p>
+            </div>
+          </div>
         </div>
 
         <!-- Controls -->
