--- a/index.html
+++ b/index.html
@@ -364,7 +364,8 @@
           <li data-target="#carousel-example-generic" data-slide-to="3"></li>
           <li data-target="#carousel-example-generic" data-slide-to="4"></li>
           <li data-target="#carousel-example-generic" data-slide-to="5"></li>
-		  <li data-target="#carousel-example-generic" data-slide-to="6"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="6"></li>
+	        <li data-target="#carousel-example-generic" data-slide-to="7"></li>
         </ol>
 
         <!-- Wrapper for slides -->
@@ -405,10 +406,16 @@
               <p>Página de Felipe Gualberto <a target="_blank" href="https://felipeagualberto.github.io/PaginaPerfil/"> clique aqui </a></p>
             </div>
           </div>
-		  <div class="item">
+		      <div class="item">
             <img src="img/luccaprint.png" alt="...">
             <div class="carousel-caption">
               <p>Página de Lucca Paranhos <a target="_blank" href="https://luccaparanhos.github.io/PaginaPerfil/"> clique aqui </a></p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="img/anublen.jpg" alt="...">
+            <div class="carousel-caption">
+              <p>Página de Pablo Nunes <a target="_blank" href="https://pablojnunes.github.io/perfil/"> clique aqui </a></p>
             </div>
           </div>
         </div>
