Adicionado pagina de Yan

--- a/index.html
+++ b/index.html
@@ -418,6 +418,12 @@
               <p>Página de Pablo Nunes <a target="_blank" href="https://pablojnunes.github.io/perfil/"> clique aqui </a></p>
             </div>
           </div>
+          <div class="item">
+            <img src="img/yanFalcao.png" alt="...">
+            <div class="carousel-caption">
+              <p>Página de Yan Falcão <a target="_blank" href="https://yanfalcao.github.io/CursoFrontEnd/"> clique aqui </a></p>
+            </div>
+          </div>
         </div>
 
         <!-- Controls -->
