--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
               Página de Alex Brito<a target="_blank" href="https://alexbo5.github.io/pagina-perfil/">clique aqui</a>
             </div>
           </div>
-          <div class="item active">
+          <div class="item">
             <img src="img/Fabiolasite.png" alt="...">
             <div class="carousel-caption">
               Página de Fabíola Oliveira<a target="_blank" href="https://fabiolaoss.github.io/PaginaPerfil/">clique aqui</a>
