Atualização dos links

--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
                       <a class="page-scroll" href="#videos">Vídeos</a>
                   </li>
                   <li>
+                      <a class="page-scroll" href="#projetos">Projetos dos Alunos</a>
+                  </li>
+                  <li>
                       <a class="page-scroll" href="#contato">Contato</a>
                   </li>
               </ul>
@@ -250,7 +253,8 @@
                       <li class="list-group-item">09/07 - 10/07 - 11/07 - 12/07 - 13/07</li>
                       <li class="list-group-item">13:00 - 17:00</li>
                       <li class="list-group-item">UNIFACS PA6 - Rio Vermelho</li>
-                      <li class="list-group-item"><a href="https://www.eventbrite.com.br/e/curso-de-desenvolvimento-front-end-para-o-mercado-semana-tarde-tickets-46587636876" target="_blank" class="page-scroll btn btn-dark-blue btn-xl sr-button">Participar</a></li>
+                      <li class="list-group-item">Realizado</li>
+                      <!-- <li class="list-group-item"><a href="#" class="page-scroll btn btn-dark-blue btn-xl sr-button">Realizado</a></li> -->
                     </ul>
                   </div>
               </div>
@@ -283,7 +287,7 @@
                       <li class="list-group-item">21/07 - 28/07 - 04/08 - 11/08 - 18/08</li>
                       <li class="list-group-item">13:00 - 17:00</li>
                       <li class="list-group-item">UNIFACS Prof. Barros - Paralela</li>
-                      <li class="list-group-item"><a href="https://www.eventbrite.com.br/e/curso-de-desenvolvimento-front-end-para-o-mercado-sabado-tarde-tickets-46451155657" target="_blank" class="page-scroll btn btn-dark-blue btn-xl sr-button">Participar</a></li>
+                      <li class="list-group-item"><a href="#" class="page-scroll btn btn-my-green btn-xl sr-button">ESGOTADO</a></li>
                     </ul>
                   </div>
               </div>
@@ -355,6 +359,14 @@
     </section>
 
     <section id="projetos" class="bg-primary">
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-12 text-center">
+                  <h2 class="section-heading">Projetos dos Alunos</h2>
+                  <hr class="primary">
+              </div>
+          </div>
+      </div>
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
