Página de Víctor

--- a/index.html
+++ b/index.html
@@ -384,6 +384,12 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
           <div class="item active">
+            <img src="img/pagina.png" alt="...">
+            <div class="carousel-caption">
+              <p>Página de Víctor Romario <a target="_blank" href="https://vrpazdejesus.github.io/curso-novo/">clique aqui</a></p>
+            </div>
+          </div>
+          <div class="item">
             <img src="img/alexsites.png" alt="...">
             <div class="carousel-caption">
               <p>Página de Alex Brito <a target="_blank" href="https://alexbo5.github.io/pagina-perfil/">clique aqui</a></p>
