adicionando pagina de raquel

--- a/index.html
+++ b/index.html
@@ -389,6 +389,12 @@
             </div>
           </div>
           <div class="item">
+            <img src="img/raquelfonseca_pmp.jpg" alt="...">
+            <div class="carousel-caption">
+              <p>Página de Raquel <a target="_blank" href="https://tiraquel.github.io/portfolio/">clique aqui</a></p>
+            </div>
+          </div>
+          <div class="item">
             <img src="img/Fabiolasite.png" alt="...">
             <div class="carousel-caption">
               <p>Página de Fabíola Oliveira <a target="_blank" href="https://fabiolaoss.github.io/PaginaPerfil/"> clique aqui </a></p>
