--- a/index.html
+++ b/index.html
@@ -390,6 +390,12 @@
             </div>
           </div>
           <div class="item">
+            <img src="img/geovane.png" alt="...">
+            <div class="carousel-caption">
+              <p>Página de Geovane Depa Borges <a target="_blank" href="https://geodepka.github.io/portfolio/">clique aqui</a></p>
+            </div>
+          </div>
+          <div class="item">
             <img src="img/alexsites.png" alt="...">
             <div class="carousel-caption">
               <p>Página de Alex Brito <a target="_blank" href="https://alexbo5.github.io/pagina-perfil/">clique aqui</a></p>
