--- a/index.html
+++ b/index.html
@@ -247,48 +247,15 @@
               </div>
           </div>
           <div class="row">
-              <div class="col-lg-3 col-md-6 text-center">
+              <div class="col-lg-12 col-md-12 text-center">
                   <div class="service-box">
                     <ul class="list-group">
-                      <li class="list-group-item black">Turma 1: Dia de Semana</li>
-                      <li class="list-group-item">09/07 - 10/07 - 11/07 - 12/07 - 13/07</li>
-                      <li class="list-group-item">13:00 - 17:00</li>
-                      <li class="list-group-item">UNIFACS PA6 - Rio Vermelho</li>
-                      <li class="list-group-item">Realizado</li>
-                      <!-- <li class="list-group-item"><a href="#" class="page-scroll btn btn-dark-blue btn-xl sr-button">Realizado</a></li> -->
-                    </ul>
-                  </div>
-              </div>
-              <div class="col-lg-3 col-md-6 text-center">
-                  <div class="service-box">
-                    <ul class="list-group">
-                      <li class="list-group-item black">Turma 2: Dia de Semana</li>
-                      <li class="list-group-item">23/07 - 24/07 - 25/07 - 26/07 - 27/07</li>
-                      <li class="list-group-item">13:00 - 17:00</li>
-                      <li class="list-group-item">UNIFACS Prof. Barros - Paralela</li>
-                      <li class="list-group-item"><a href="https://www.eventbrite.com.br/e/curso-de-desenvolvimento-front-end-para-o-mercado-semana-tarde-tickets-46588175487" target="_blank" class="page-scroll btn btn-dark-blue btn-xl sr-button">Participar</a></li>
-                    </ul>
-                  </div>
-              </div>
-              <div class="col-lg-3 col-md-6 text-center">
-                  <div class="service-box">
-                    <ul class="list-group">
-                      <li class="list-group-item black">Turma 3: Dias de Sábado</li>
-                      <li class="list-group-item">21/07 - 28/07 - 04/08 - 11/08 - 18/08</li>
-                      <li class="list-group-item">08:00 - 12:00</li>
-                      <li class="list-group-item">UNIFACS PA6 - Rio Vermelho</li>
-                      <li class="list-group-item"><a href="https://www.eventbrite.com.br/e/curso-de-desenvolvimento-front-end-para-o-mercado-sabado-manha-tickets-46450975117" target="_blank" class="page-scroll btn btn-dark-blue btn-xl sr-button">Participar</a></li>
-                    </ul>
-                  </div>
-              </div>
-              <div class="col-lg-3 col-md-6 text-center">
-                  <div class="service-box">
-                    <ul class="list-group">
-                      <li class="list-group-item black">Turma 4: Dias de Sábado</li>
-                      <li class="list-group-item">21/07 - 28/07 - 04/08 - 11/08 - 18/08</li>
-                      <li class="list-group-item">13:00 - 17:00</li>
-                      <li class="list-group-item">UNIFACS Prof. Barros - Paralela</li>
-                      <li class="list-group-item"><a href="#" class="page-scroll btn btn-my-green btn-xl sr-button">ESGOTADO</a></li>
+                      <li class="list-group-item black">Turma 1: Nas Quintas-feiras</li>
+                      <li class="list-group-item">11/10 - 18/10 e 25/10</li>
+                      <li class="list-group-item">13:00 - 18:00</li>
+                      <li class="list-group-item">UNIFACS Paralela</li>
+                      <!-- <li class="list-group-item">Realizado</li> -->
+                      <li class="list-group-item"><a href="https://www.eventbrite.com.br/e/curso-de-desenvolvimento-front-end-para-o-mercado-tickets-50572494693" target="_blank" class="page-scroll btn btn-dark-blue btn-xl sr-button">Inscreva-se</a></li>
                     </ul>
                   </div>
               </div>
