Atualização das informações

--- a/index.html
+++ b/index.html
@@ -156,14 +156,14 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-clock-o text-primary sr-icons"></i>
                         <h3>20 Horas de Carga Horária</h3>
-                        <p class="text-muted">5 dias de curso!</br> Com certificado!</p>
+                        <p class="text-muted">3 dias de curso!</br> Com certificado!</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-calendar text-primary sr-icons"></i>
-                        <h3>Turmas pela semana e aos Sabados</h3>
-                        <p class="text-muted">Turmas pela manhã e pela tarde</p>
+                        <h3>Turma pela semana</h3>
+                        <p class="text-muted">Turma pela tarde</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -192,7 +192,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-list-alt text-primary sr-icons"></i>
                         <h3>Plano de Aula</h3>
-                        <p class="text-muted">A ser seguido nos 5 dias de curso.</p>
+                        <p class="text-muted">A ser seguido nos 3 dias de curso.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
