Atualização de dias

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-clock-o text-primary sr-icons"></i>
                         <h3>20 Horas de Carga Horária</h3>
-                        <p class="text-muted">3 dias de curso!</br> Com certificado!</p>
+                        <p class="text-muted">3 aulas de 5 horas e meia!</br>Projetos</br>Com certificado!</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
