--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
               <div class="col-lg-12 col-md-12 text-center">
                   <div class="service-box">
                     <ul class="list-group">
-                      <li class="list-group-item black">Turma 1: Nas Quintas-feiras</li>
-                      <li class="list-group-item">11/10 - 18/10 e 25/10</li>
-                      <li class="list-group-item">13:00 - 18:00</li>
+                      <li class="list-group-item black">Turma Noturno</li>
+                      <li class="list-group-item">27/11 - 29/11 - 04/12 e 06/12</li>
+                      <li class="list-group-item">18:30 - 22:00</li>
                       <li class="list-group-item">UNIFACS Paralela</li>
                       <!-- <li class="list-group-item">Realizado</li> -->
                       <li class="list-group-item"><a href="https://www.eventbrite.com.br/e/curso-de-desenvolvimento-front-end-para-o-mercado-tickets-50572494693" target="_blank" class="page-scroll btn btn-dark-blue btn-xl sr-button">Inscreva-se</a></li>
